list fix